tests/errors/comprehensive/E4011_member_access_invalid_type.ez
/*
 * Error Test: E4011 - member-access-invalid-type
 * Expected: "not a struct"
 */
import & use @std

do main() {
    temp s = "hello"
    println(s.name)  // strings don't have members
}
